--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,71 @@
 body {
-    background-color: beige;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+}
+
+header {
+    height: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+nav {
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+}
+
+li > p {
+    padding: none;
+    margin: none;
+    font-size: 2.1rem;
+    color: pink;
+    font-family: "Pacifico", cursive;
+}
+
+li {
+    display: flex;
+    list-style: none;
+    gap: 150px;
+}
+
+li > p:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    color: white;
+}
+
+#content {
+    height: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.resto-name-cont {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.resto-name {
+    font-family: "Pacifico", cursive;
+    font-weight: 600;
+    font-size: 4rem;
+    font-style: normal;
+    margin: 0;
+    padding: 0;
+}
+
+.slogan {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 2.3rem;
+    padding: 0;
+    margin: 0;
 }
