--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ nav {
     width: 50%;
 }
 
-li > p {
+.nav-bar > li {
     padding: none;
     margin: none;
     font-size: 2.1rem;
@@ -26,13 +26,13 @@ li > p {
     font-family: "Pacifico", cursive;
 }
 
-li {
+.nav-bar {
     display: flex;
     list-style: none;
     gap: 150px;
 }
 
-li > p:hover {
+.nav-bar > li:hover {
     cursor: pointer;
     text-decoration: underline;
     color: white;
@@ -43,6 +43,7 @@ li > p:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
 
 .resto-name-cont {
@@ -68,4 +69,15 @@ li > p:hover {
     font-size: 2.3rem;
     padding: 0;
     margin: 0;
+}
+
+.opening-hours {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: bold;
+    font-size: 2rem;
+    list-style: none;
+    color: pink;
 }
