--- a/src/styles.css
+++ b/src/styles.css
@@ -4,13 +4,13 @@ body {
     height: 100vh;
 }
 
-header {
+.header {
     height: 10%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
-nav {
+.nav-bar {
     display: flex;
     height: 100%;
     justify-content: center;
@@ -18,7 +18,7 @@ nav {
     width: 50%;
 }
 
-.nav-bar > li {
+.list > li {
     padding: none;
     margin: none;
     font-size: 2.1rem;
@@ -26,24 +26,16 @@ nav {
     font-family: "Pacifico", cursive;
 }
 
-.nav-bar {
+.list {
     display: flex;
     list-style: none;
     gap: 150px;
 }
 
-.nav-bar > li:hover {
+.list > li:hover {
     cursor: pointer;
     text-decoration: underline;
     color: white;
-}
-
-#content {
-    height: 90%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
 }
 
 .resto-name-cont {
@@ -80,4 +72,36 @@ nav {
     font-size: 2rem;
     list-style: none;
     color: pink;
+}
+
+.resto-header, .antimenu-title {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+}
+
+
+.menu-title {
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: 200;
+    font-size: 4em;
+}
+
+.antimenu-cont > div {
+    color: pink;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: 400;
+}
+
+.antimenu-cont > div > p {
+    font-size: 1.8rem;
+    margin: 0;
+    padding: 0;
+}
+
+.antimenu-cont > div > div {
+    font-size: 1.2rem;
+}
+
+.antimenu-cont > :nth-child(2) {
+    margin-top: 15px;
 }
