--- a/src/styles.css
+++ b/src/styles.css
@@ -121,3 +121,9 @@ body {
     margin: 0;
     padding: 0;
 }
+
+.contact-info {
+    list-style: none;
+    margin-left: 0;
+    padding-left: 0;
+}
