--- a/src/styles.css
+++ b/src/styles.css
@@ -67,7 +67,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: bold;
     font-size: 2rem;
     list-style: none;
@@ -123,7 +123,21 @@ body {
 }
 
 .contact-info {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
     list-style: none;
     margin-left: 0;
     padding-left: 0;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+.central-cont > div > h2 {
+    font-family: "Pacifico", cursive;
+    font-weight: 400;
+    font-size: 2rem;
+}
+
+.central-cont > div > p {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
